Fixes root path and project name

--- a/infrastructure/apps/argocd/applicationsets/insfrastucture.yaml
+++ b/infrastructure/apps/argocd/applicationsets/insfrastucture.yaml
@@ -18,7 +18,7 @@ spec:
       labels:
         app.kubernetes.io/part-of: infrastructure
     spec:
-      project: infrastructure
+      project: default
       source:
         repoURL: https://github.com/SweBarre/home-k8s.git
         targetRevision: main
