--- a/infrastructure/apps/sealed-secrets.yaml
+++ b/infrastructure/apps/sealed-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: root
+  name: sealed-secrets
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -9,12 +9,17 @@ spec:
   project: default
   source:
     repoURL: https://github.com/SweBarre/home-k8s.git
-    path: infrastructure/apps/argocd/applicationsets
     targetRevision: main
+    path: infrastructure/sealed-secrets
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+      allowEmpty: false
+    syncOptions:
+      - Validate=true
+      - CreateNamespace=false
+      - PrunePropagationPolicy=foreground
+      - PruneLast=true
