--- a/infrastructure/argocd/values.yaml
+++ b/infrastructure/argocd/values.yaml
@@ -26,6 +26,16 @@ crds:
 #      - profile
 #      - email
 
+#repoServer:
+#  containerSecurityContext:
+#    readOnlyRootFilesystem: true
+#  volumes:
+#    - name: cmp-kustomize-build-with-helm
+#      configMap:
+#        name: argocd-cmp-cm
+#    - name: cmp-tmp
+#      emptyDir: {}
+
 server:
   ingress:
     enabled: false
