--- a/infrastructure/apps/sealed-secrets.yaml
+++ b/infrastructure/apps/sealed-secrets.yaml
@@ -14,3 +14,12 @@ spec:
   destination:
     server: "https://kubernetes.default.svc"
     namespace: kubeseal
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - Validate=true
+      - CreateNamespace=true
+      - PrunePropagationPolicy=foreground
+      - PruneLast=true
