--- a/infrastructure/apps/test-nginx.yaml
+++ b/infrastructure/apps/test-nginx.yaml
@@ -12,7 +12,8 @@ spec:
     path: infrastructure/test-nginx
     repoURL: https://github.com/SweBarre/home-k8s.git
     targetRevision: main
-    kustomize: {}
+    plugin:
+      name: kustomize-build-with-helm
   syncPolicy:
     automated:
       prune: true
