--- a/infrastructure/core/sealed-secrets/kustomization.yaml
+++ b/infrastructure/core/sealed-secrets/kustomization.yaml
@@ -8,7 +8,7 @@ helmCharts:
   - name: sealed-secrets
     version: 2.17.6
     repo: https://bitnami-labs.github.io/sealed-secrets
-    releaseName: seled-secrets
+    releaseName: sealed-secrets
     namespace: kubeseal
 
 commonAnnotations:
