Adds apiversion to pvc template

--- a/workloads/gotify/statefulset.yaml
+++ b/workloads/gotify/statefulset.yaml
@@ -26,7 +26,9 @@ spec:
         - name: gotify-data
           mountPath: /app/data
   volumeClaimTemplates:
-  - metadata:
+  - apiVersion: v1
+    kind: PersistentVolumeClaim
+    metadata:
       name: gotify-data
     spec:
       accessModes: [ "ReadWriteOnce" ]
