Enable automerge on patch level updates

--- a/renovate.json
+++ b/renovate.json
@@ -48,5 +48,16 @@
       ],
       "datasourceTemplate": "git-tags"
     }
+  ],
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["patch"],
+      "automerge": true,
+      "automergeType": "pr" 
+    },
+    {
+      "matchUpdateTypes": ["minor", "major"],
+      "automerge": false
+    }
   ]
 }
