--- a/workloads/workloads.yaml
+++ b/workloads/workloads.yaml
@@ -1,24 +1,24 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: infrastructure-components
+  name: workloads
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "-2"
+    argocd.argoproj.io/sync-wave: "10"
 spec:
   generators:
   - git:
       repoURL: https://github.com/SweBarre/home-k8s
       revision: main
       directories:
-      - path: infrastructure/core/*
+      - path: workloads/*
   template:
     metadata:
       name: '{{path.basename}}'
       labels:
-        type: infrastructure
+        rre.nu/type: workloads
     spec:
-      project: infrastructure
+      project: workloads
       source:
         repoURL: https://github.com/SweBarre/home-k8s
         targetRevision: main
