--- a/infrastructure/infrastructure-core.yaml
+++ b/infrastructure/infrastructure-core.yaml
@@ -15,6 +15,7 @@ spec:
   template:
     metadata:
       name: '{{path.basename}}'
+      finalizers: []
       labels:
         rre.nu/type: infrastructure-core
     spec:
