Adds all USB devices (?)

--- a/infrastructure/core/node-feature-discovery/values.yaml
+++ b/infrastructure/core/node-feature-discovery/values.yaml
@@ -2,13 +2,6 @@ worker:
   config:
     sources:
       usb:
-        deviceClassWhitelist:
-          - "0e"
-          - "ef"
-          - "fe"
-          - "ff"
-          - "0451"
         deviceLabelFields:
-          - "class"
-          - "vendor"
-          - "device"
+          - vendor
+          - device
