--- a/workloads/nextcloud/nextcloud-pg.yaml
+++ b/workloads/nextcloud/nextcloud-pg.yaml
@@ -7,6 +7,10 @@ spec:
   instances: 1
   imageName: ghcr.io/cloudnative-pg/postgresql:17.5
 
+  env:
+  - name: TZ
+    value: Europe/Stockholm
+
   bootstrap:
     initdb:
       database: nextcloud
