--- a/workloads/nextcloud/nextcloud-pg.yaml
+++ b/workloads/nextcloud/nextcloud-pg.yaml
@@ -19,6 +19,7 @@ spec:
         name: nextcloud-postgres
   plugins:
     - name: barman-cloud.cloudnative-pg.io
+      enabled: true
       isWALArchiver: true
       parameters:
         barmanObjectName: minio-store
