Changes access mode for pvc

--- a/poblano/workloads/pi-hole/values.yaml
+++ b/poblano/workloads/pi-hole/values.yaml
@@ -44,7 +44,7 @@ dnsmasq:
   - domain=rre.nu
 persistentVolumeClaim:
   accessModes:
-  - ReadWriteMany
+  - ReadWriteOnce
   enabled: true
   size: 500Mi
   storageClass: local-path
