Fixed the namespace name

--- a/workloads/nextcloud/objectstore.yaml
+++ b/workloads/nextcloud/objectstore.yaml
@@ -2,7 +2,7 @@ apiVersion: barmancloud.cnpg.io/v1
 kind: ObjectStore
 metadata:
   name: minio-store
-  namespace: default
+  namespace: nextcloud
 spec:
   configuration:
     destinationPath: s3://postgres-backup/
