--- a/workloads/immich/scheduled-backup.yaml
+++ b/workloads/immich/scheduled-backup.yaml
@@ -2,7 +2,7 @@ apiVersion: postgresql.cnpg.io/v1
 kind: ScheduledBackup
 metadata:
   namespace: nextcloud
-  name: nextcloud-daily-db-backup
+  name: immich-daily-db-backup
 spec:
   schedule: "0 0 6 * * *"
   backupOwnerReference: self
